crates/toml/tests/snapshots/invalid/table/text-after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this shouldn't be here
  |         ^
unexpected key or value, expected newline, `#`
